<resources>
    <string name="app_name">DeLighted</string>
    <string name="set_date">Set Date</string>
    <string name="set_duration">Set Duration</string>
    <string name="list_alarms">List Alarms</string>
    <string name="clear_alarms">Clear Alarms</string>
    <string name="delete">Delete</string>
    <string name="snooze">Snooze</string>
    <string name="stop">Stop</string>
    <string name="url">URL</string>
    <string name="seturl">SetURL</string>
</resources>
