<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabOneFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/OutPutLayout"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/OutPutText"
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RequestButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/pick_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_date" />

        <Button
            android:id="@+id/pick_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_duration" />

        <Button
            android:id="@+id/list_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_alarms" />

        <Button
            android:id="@+id/clear_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_alarms" />

        <Button
            android:id="@+id/delete_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/snooze_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snooze" />

        <Button
            android:id="@+id/stop_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/URLConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/URLText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/url" />

        <Button
            android:id="@+id/SetURLButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seturl" />
    </LinearLayout>
</LinearLayout>

